--- a/assets/style.css
+++ b/assets/style.css
@@ -1,66 +1,83 @@
 /* LOCATION & SIZES */
+.container {
+    display: grid;
+    grid-template: 1fr 4fr 2fr/repeat(3, 1fr);
+    grid-template-areas:  
+    "header header header"
+    "main main main"
+    "footer footer footer";
+}
 .header {
-    padding: 2vw;
+    grid-area: header;
+    display: grid;
+    align-items: center;
 }
 .main {
+    grid-area: main;
     display: grid;
-    grid-template: 1fr/2fr 1fr;
+    grid-template-areas: "body body aside";
 }
 .body {
+    grid-area: body;
     display: grid;
-    grid-template: 40% 30% 30%/1fr;
+    grid-template: 2fr 1fr 1fr/ 1fr 1fr;
+    grid-template-areas:
+    "title title"
+    "section-1 section-2"
+    "section-3 section-3";
 }
-.body h2 {
-    margin-top: 3vw;
-    margin-bottom: 8vw;
-    padding: 0;
+.title {
+    grid-area: title;
+    margin-top: 2vw;
 }
-.wrap {
-    display: grid;
-    grid-template-columns:1fr 1fr;
-}
-.section {
+.body section {
     margin: 0 1vw 2vw 1vw;
     display: grid;
     align-items: center;
 }
-.section h3 {
-    margin: 2vw;
+.section-1 {
+    grid-area: section-1;
+}
+.section-2 {
+    grid-area: section-2;
+}.section-3 {
+    grid-area: section-3;
 }
 .aside {
-    padding-top: 3vw;
+    grid-area:aside;
+    padding-top: 2vw;
 }
 .footer {
+    grid-area: footer;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    align-items: center;
     justify-content: space-around;
+    grid-template-columns: repeat(4, fit-content(250px));
 }
 .section_footer {
-    padding: 2vw 1vw;
-    margin: 2vw 1vw;
+    margin: 2vw 1vw 2vw 1vw;
+    padding: 2vw 1vw 2vw 1vw;
 }
-
-
 /* FONTS & STYLES */
 * {
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 2vw;
-    font-weight: 600;
+    font-weight: bold;
     text-align: center;
-    text-wrap: nowrap;
 }
 .header, .footer {
-    background-color: rgb(180, 182, 184);
+    background-color: rgb(171, 168, 168);
 }
 .body {
-    background-color: rgb(253, 246, 217);
-}
-.section {
-    background-color: rgb(252, 229, 173);
+    background-color: rgb(247, 234, 219);
 }
 .aside {
-    background-color: rgb(202, 255, 186);
+    background-color: rgb(140, 239, 178);
+}
+.section-1, .section-2, .section-3 {
+    background-color: rgb(247, 211, 167);
 }
 .section_footer {
-    background-color: rgb(233, 234, 234);
+    background-color: lightgrey;
+    text-align: center;
 }
